# scaling-specialization-dense-lms

./: .gitignore  AGENTS.md  CITATION.cff  CONTRIBUTING.md  LICENSE  PROJECT.md  README.md  pyproject.toml
.github/ISSUE_TEMPLATE/: bug_report.yml  research_task.yml
.github/workflows/: ci.yml
data/: README.md  probe_tasks.jsonl
docs/: CODEX_HANDOFF.md  PLAN.md  PROJECT_OVERVIEW.md  SAE_STRATEGY.md  SOLUTION_ARCHITECTURE.md
notebooks/: 10_sparsity_sanity.ipynb
scripts/: plot_sparsity.py  run_capture.py  run_dynamick_eval.py  run_metrics.py
src/sdlms/: activations.py  dynamick.py  metrics.py  probe_tasks.py
src/sdlms/cli/: __init__.py  dynamic_k.py  sae_train.py  si_modularity.py  sparsity.py
tests/: test_sae_train_cli.py  test_sparsity_cli.py
