[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sdlms"
version = "0.1.0"
description = "Scaling specialization & sparsity in dense LMs: metrics, SAEs, and dynamic-k execution"
authors = [{name = "Wasim Akram", email = "mailwasim@gmail.com"}]
readme = "README.md"
requires-python = ">=3.13,<3.14"
dependencies = [
  "torch",
  "transformers>=4.44",
  "datasets",
  "accelerate",
  "evaluate",
  "networkx",
  "numpy",
  "pandas",
  "matplotlib",
  "sae-lens",
]

[project.scripts]
sparsity = "sdlms.cli.sparsity:main"
si-modularity = "sdlms.cli.si_modularity:main"
sae-train = "sdlms.cli.sae_train:main"
dynamic-k = "sdlms.cli.dynamic_k:main"

[dependency-groups]
dev = ["pytest>=8", "kaggle>=1.6"]
lint = ["ruff>=0.5"]

[tool.uv]
default-groups = ["dev", "lint"]

[tool.ruff]
line-length = 100
target-version = "py313"
preview = true

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "N", "ANN"]
fixable = ["ALL"]
per-file-ignores = { "src/__init__.py" = ["F401"], "src/sdlms/__init__.py" = ["F401"] }

[tool.ruff.format]
quote-style = "single"
docstring-code-format = true
